[project]
name = "rl-openenv"
version = "0.1.0"
description = "SRE Incident Response environment for OpenEnv"
authors = [
    { name = "AyusGup", email = "ag835@example.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "openai>=1.30.0",
    "openenv-core>=0.1.1",
    "pytest>=7.3.0",
    "docker>=6.1.0",
    "ruff>=0.1.0",
    "sh>=1.14.3; platform_system!='Windows'", # For easier subprocess handling on linux
]

[project.optional-dependencies]
dev = [
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0"
]

[project.scripts]
server = "sre_env.server.app:main"

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "N", "W", "D"]
ignore = ["D100", "D104"]

[tool.ruff.pydocstyle]
convention = "google"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]

[tool.setuptools]
py-modules = ["client", "models"]

[tool.setuptools.packages.find]
include = ["providers*", "server*", "tasks*", "utils*"]
